Fixed about page wrapping

--- a/Style.css
+++ b/Style.css
@@ -32,14 +32,14 @@ ul
 {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 450;
-    font-size: clamp(10px, 1vw, 18px);
+    font-size: clamp(15px, 1vw, 18px);
 }
 
 p
 {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 350;
-    font-size: clamp(10px, 1vw, 18px);
+    font-size: clamp(15px, 1vw, 18px);
 }
 
 .about-page
@@ -793,6 +793,30 @@ p
     .reverse
     {
         flex-direction: row;
+    }
+
+    .demo-content
+    {
+        flex-direction: column-reverse;
+    }
+
+    .demo-descripition
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .demo-summary
+    {
+        justify-content: center;
+        align-items: center;
+        width: 40%;
+        text-align: center;
+    }
+
+    .img-wrap
+    {
+        width: 80%;
     }
 
     .content-icon img
